v0.29.3 -- fix layout bugs on mobile
Addresses the following layout bugs in mobile view:

* improper rendering of award images on posts
* upvote ratio no longer appearing on bottom-right corner of post as
  before
* Reddit warning pop-up background cut off at bottom of page

Fixes #713.

--- a/static/style.css
+++ b/static/style.css
@@ -1613,10 +1613,9 @@ td, th {
 
 	.popup {
 		width: auto;
-		bottom: 10vh;
 	}
 
-	.popup-inner > a, h1, p, img {
-		width: 100%;
+	.popup-inner {
+		max-width: 80%;
 	}
 }
